mock-exam-1/sega.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: sega
  name: sega
spec:
  containers:
  - image: busybox
    name: tails
    command: ["sleep","3600"]
    resources: {}
  - image: nginx
    name: sonic
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
