mock-exam-1/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-access
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
    - Ingress
  ingress:
    - from:
       - podSelector:
            matchLabels:
              access: redis
      ports:
        - protocol: TCP
          port: 6379
